/* Translations */ +da <sudden#56269>

--- a/wiki/sudden.wikitext
+++ b/wiki/sudden.wikitext
@@ -13,17 +13,18 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--left column-->
+*Danish: [[brat]]
 *Chinese: [[突然]]的
 *Dutch: [[plotseling]], [[plotselinge]]
 *French: [[soudain]] ''m'', [[soudaine]] ''f''
 *German: [[plötzlich]]
 *Greek: [[ξαφνικός]] ''m'', [[ξαφνική]] ''f'', [[ξαφνικό]] ''n''
-*Italian: [[improvviso]] ''m'', [[improvvisa]] ''f''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--right column-->
+*Italian: [[improvviso]] ''m'', [[improvvisa]] ''f''
 *Japanese: [[突然]]の
 *Korean: [[급격한]]
 *Portuguese: [[repentino]] ''m'', [[repentina]] ''f''
