+danish article <bud#55036>

--- a/wiki/bud.wikitext
+++ b/wiki/bud.wikitext
@@ -139,5 +139,19 @@
 |}
 |}
 
+----
+
+==Danish==
+===Noun===
+'''bud''' ''n''
+
+# [[message]]
+# delivery man
+# [[messenger]]
+# [[offer]]
+
+====Related terms====
+*[[budskab]] ''n''
+
 [[it:bud]]
 [[pl:Bud]]
