--- a/wiki/abdomen.wikitext
+++ b/wiki/abdomen.wikitext
@@ -3,6 +3,8 @@
 Latin ''abdomen'', of uncertain origin; compare French ''abdomen''
 
 ===Noun===
+'''abdomen''' ([[abdomens]])
+
 #(''anatomy'') The [[belly]], or that part of the body between the [[thorax]] and the [[pelvis]].
 #The cavity of the belly, which is lined by the [[peritoneum]], and contains the stomach, [[bowels]], and other [[viscera]]. In man, often restricted to the part between the [[diaphragm]] and the [[commencement]] of the pelvis, the [[remainder]] being called the [[pelvic]] cavity.
 #:''He was all bent over complaining of pains in the abdomen.''
@@ -62,6 +64,9 @@ Latin ''abdomen'', of uncertain origin; compare French ''abdomen''
 {|
 |}
 |}
+
+===Translations to be checked===
+*Danish: [[bug]] ''c''
 
 ----
 
