--- a/wiki/message.wikitext
+++ b/wiki/message.wikitext
@@ -5,13 +5,18 @@ French, from Late Latin ''missaticum'', from Latin ''mittere'', ''missum'', to s
 
 ===Noun===
 '''message'''  (''plural:'' [[messages]])
+
 #A concept conveyed by symbology
 #''(communications)'': Information which is sent from a source to a receiver.
 #An official communication, delivered by a messenger.
 #''(In Ireland)'' Colloquial term for groceries. (Always plural)
 
+====Translations====
+*Danish: [[bud]] ''n''
+
 ===Verb===
 '''message''' [[transitive]] ('''[[messaged]]''', '''[[messaging]]''')
+
 #''(obsolete)'': To bear as a message
 #''(communications)'': To [[transmit]] a message, e.g. as text via a cell phone.
 
