--- a/wiki/offer.wikitext
+++ b/wiki/offer.wikitext
@@ -2,17 +2,21 @@
 
 ===Noun===
 '''offer'''  (''plural:'' [[offers]])
+
 #a proposal that has been made
 #something put forth, bid, proffered or tendered
 
+====Translations====
+*Danish: [[bud]] ''n''
+
 ===Verb===
 '''offer'''  ([[offers]], [[offered]], [[offering]])
+
 #to propose something
 #to place at one's disposal
 #to [[proffer]]
 
 ===Translations===
-
 *Dutch: [[aanzoek]], [[aanzoek]], [[aanbieden]], [[aanbieding]], [[aanbod]], [[aanbieden]], [[indienen]], [[presenteren]], [[voorstellen]], [[vertonen]]
 *French: [[offrir]], [[offre]]
 *Finnish: [[tarjota]] (verb), [[tarjous]] (noun)
