/* Zen in Japan */ added mention of Zen at War <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -79,6 +79,8 @@ The following Zen traditions still exist in Japan: [[Rinzai]], [[Soto]], and [[O
 
 Some contemporary Japanese Zen teachers, such as [[Daiun Harada]] and [[Shunryu Suzuki]] have criticized Japanese Zen as being a formalized system of empty rituals with very few Zen practitioners ever actually ''attaining'' realization.  They assert that almost all Japanese temples have become family businesses handed down from father to son, and the Zen priest's function has largely been reduced to officiating at funerals.
 
+Some Japanese Zen [[sect]]s and teachers have also been criticized for their involvement in Japanese [[militarism]] and [[nationalism]] especially during [[World War II]].  In particular an American [[Soto]] Zen priest Brian Victoria has exposed a number of instances where Buddhist teachings were used to justify acts of killing. [http://www.amazon.com/exec/obidos/tg/detail/-/0834804050/103-9814091-3292632?v=glance]
+
 Zen is also associated with [[Japanese tea ceremony]].
 
 ==Zen and Buddhism==
