/* Koan practice */ spelling correction <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -153,7 +153,7 @@ The Zen student's mastery of a given koan is presented to the teacher in a priva
 
 It is misleading to suggest there is a single correct answer for any given koan, though there are "correct" and "incorrect" answers, and, indeed, students in a [[cheat]]ing mindset would often compile books of accepted answers to koans to help prepare for the interview.  These collections are of great value to modern scholarship on the subject.
 
-Following the tradition of "living koans," a number of western Zen teachers suplement the traditional koan curriculum using various western sources, such as apparently paradoxical sayings from the [[Bible]].
+Following the tradition of "living koans," a number of western Zen teachers supplement the traditional koan curriculum using various western sources, such as apparently paradoxical sayings from the [[Bible]].
 
 ==Radical teachings==
 
