/* Translations */ +da <messenger#53153>

--- a/wiki/messenger.wikitext
+++ b/wiki/messenger.wikitext
@@ -9,6 +9,7 @@
 
 ====Translations====
 *Chinese: [[信使]]
+*Danish: [[bud]] ''n''
 *Dutch: [[boodschapper]] ''m''
 *French: [[messager]] ''m''
 *German: [[Kurier]] ''m''
