--- a/wiki/smoke.wikitext
+++ b/wiki/smoke.wikitext
@@ -163,5 +163,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[smoker]]
 *[[smoke screen]]
 
-[[ru:Smoke]]
 [[Category:1000 English basic words]]
+
+[[es:smoke]]
+[[ru:Smoke]]
