robot  Adding:fi <smile#5437>

--- a/wiki/smile.wikitext
+++ b/wiki/smile.wikitext
@@ -58,6 +58,8 @@
 *Vietnamese: [[cười]]
 *Welsh: [[gwên]]
 
-[[es:smile]]
 [[Category:Positive words]]
 [[Category:1000 English basic words]]
+
+[[es:smile]]
+[[fi:Smile]]
