robot  Adding:fi,hu,zh,fr <snake#4440>

--- a/wiki/snake.wikitext
+++ b/wiki/snake.wikitext
@@ -114,6 +114,11 @@ From Middle English < Old English '''[[snaca]]''' < Proto-Germanic '''[[*snakon]
 
 [[Category:English reptiles]]
 
-[[es:snake]]
-[[ru:Snake]]
 [[Category:1000 English basic words]]
+
+[[es:snake]]
+[[fr:snake]]
+[[hu:snake]]
+[[ru:Snake]]
+[[fi:Snake]]
+[[zh:Snake]]
