+eponym cat; rfc <ampere#36277>

--- a/wiki/ampere.wikitext
+++ b/wiki/ampere.wikitext
@@ -1,3 +1,4 @@
+{{rfc}}
 ==English==
 '''ampere''' ''or'' (''old-fashioned'') '''ampère'''
 
@@ -36,5 +37,6 @@
 #(''m'') ampere
 #(''pl'') plural of '''ampere'''
 
+[[Category:English eponyms]]
 [[gl:Ampere]]
 [[pl:Ampere]]
