--- a/wiki/mars.wikitext
+++ b/wiki/mars.wikitext
@@ -113,8 +113,8 @@ Latin ''[[Mars]]'', from older Latin '''[[Mavors]]'''.  The candy bar is named a
 # Roman god of war
 # the month [[March]]
 
-
 [[Category:Dutch planets]]
+[[Category:English eponyms]]
 [[Category:French months]]
 [[Category:French planets]]
 [[Category:Swedish months]]
