+en eponyms cat <Gregorian calendar#72667>

--- a/wiki/Gregorian_calendar.wikitext
+++ b/wiki/Gregorian_calendar.wikitext
@@ -1,6 +1,8 @@
 ==English==
 ===Noun phrase===
-'''Gregorian calendar'''
+'''[[Gregorian]] [[calendar]]'''
 
 {{wikipedia}}
 # The [[calendar]], currently used in the [[western]] [[world]], named after [[Pope]] Gregory XIII, devised to halt the slow drift of the [[Vernal equinox]] earlier in the [[year]].
+
+[[Category:English eponyms]]
