--- a/wiki/ohm.wikitext
+++ b/wiki/ohm.wikitext
@@ -40,6 +40,7 @@ The plural is not actually used. A resistance is actually expressed as ''De weer
 
 # ohm
 
+[[Category:English eponyms]]
 [[fr:ohm]]
 [[gl:Ohm]]
 [[pl:Ohm]]
