--- a/wiki/Kuiper_belt.wikitext
+++ b/wiki/Kuiper_belt.wikitext
@@ -20,3 +20,4 @@ A region of [[space]] between 30 and 50 [[Astronomical Unit]]s from the sun, rou
 * [[w:Kuiper_belt|Kuiper Belt in Wikipedia]]
 
 [[Category:Astronomy]]
+[[Category:English eponyms]]
