+en eponym cat <mercury#30066>

--- a/wiki/mercury.wikitext
+++ b/wiki/mercury.wikitext
@@ -218,7 +218,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Wiktionary_Appendix:Planets|Appendix on Planets]]
 
 [[Category:Chemical elements]]
-
+[[Category:English eponyms]]
 [[it:mercury]]
 [[la:Mercury]]
 [[pl:Mercury]]
