robot  Adding:fi <snow#8469>

--- a/wiki/snow.wikitext
+++ b/wiki/snow.wikitext
@@ -104,6 +104,8 @@ From {{enm}}, from {{ang}} [[snaƿ|snāƿ]]. [[Category:Indo-European root *snei
 ===See also===
 *[[wikipedia:Snow|Wikipedia article on snow]]
 
-[[ru:Snow]]
 [[Category:Impersonal verbs]]
 [[Category:1000 English basic words]]
+
+[[ru:Snow]]
+[[fi:Snow]]
