/* Zen and Buddhism */ <zen#647647>

--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -84,6 +84,7 @@ Some Japanese Zen [[sect]]s and teachers have also been criticized for their inv
 Zen is also associated with [[Japanese tea ceremony]].
 
 ==Zen and Buddhism==
+{{buddhism}}
 Zen is considered by some as not necessarily a [[Buddhist]] religion as a number of non-Buddhists, particularly Christians, have been formally acknowledged as [[Zen master]]s.  Zen is often described as a ''way of life'' not dependent on one's particular culture. 
 
 At the same time, the institutions that support Zen practice have historically all been Buddhist and uphold the fundamental teachings of [[Gautama Buddha]]. Even today there are very few non-Buddhist Zen teachers and fewer organizations to support non-Buddhist practice. So, for all practical purposes Zen is Zen Buddhism.
