robot  Adding:et <social#69801>

--- a/wiki/social.wikitext
+++ b/wiki/social.wikitext
@@ -11,13 +11,14 @@
 #Needing (nearly) constant human interaction
 #related to [[society]]
 
-[[es:social]]
-[[fr:social]]
-[[pl:Social]]
-
 ===See also===
 *[[social conscience]]
 *[[social security]]
 *[[social science]], [[social studies]]
 *[[social worker]]
 *[[socialist]]
+
+[[et:Social]]
+[[es:social]]
+[[fr:social]]
+[[pl:Social]]
