+en eponym cat <kilowatt#84992>

--- a/wiki/kilowatt.wikitext
+++ b/wiki/kilowatt.wikitext
@@ -4,4 +4,6 @@
 #a [[unit]] of [[power]], 1000 [[watt]]s
 ===Derived terms===
 *[[kilowatt-hour]]
+
+[[Category:English eponyms]]
 [[Category:English nouns]]
