+en eponym cat <kilowatt-hour#84993>

--- a/wiki/kilowatt-hour.wikitext
+++ b/wiki/kilowatt-hour.wikitext
@@ -3,4 +3,6 @@
 '''[[kilowatt]]-[[hour]]'''
 #a [[unit]] of [[electrical]] [[energy]] equal to that done by one kilowatt acting for one hour
 #(''British'') a "unit" of electrical [[consumption]] by which [[domestic]] [[consumer]]s are [[charge]]d
+
+[[Category:English eponyms]]
 [[Category:English nouns]]
