robot  Adding:fi <society#54928>

--- a/wiki/society.wikitext
+++ b/wiki/society.wikitext
@@ -69,5 +69,7 @@
 *[[society function]]
 *[[society pages]]
 
-[[la:Society]]
 [[Category:1000 English basic words]]
+
+[[la:Society]]
+[[fi:Society]]
