--- a/wiki/sodomy.wikitext
+++ b/wiki/sodomy.wikitext
@@ -4,3 +4,5 @@
 '''sodomy'''
 #Any of various forms of [[sexual]] [[intercourse]] held to be [[unnatural]], [[abnormal]] or [[illegal]], especially [[anal]] [[sex]]
 [[Category:English nouns]]
+
+[[fi:Sodomy]]
