--- a/wiki/inflation.wikitext
+++ b/wiki/inflation.wikitext
@@ -25,6 +25,8 @@ From {{L.}} [[inflatio]], ''expansion'', noun of process from perfect passive pa
 '''Expansion in the money supply'''
 *Belarusian: [[інфляцыя]] (infliacyja)
 *Chinese: [[通货膨胀]]
+*Czech: [[inflace]]
+*Danish: [[inflation]]
 *Dutch: [[inflatie]]
 *Esperanto: [[inflacio]]
 *Estonian: [[inflatsioon]]
