fxd da <inflation#2139>

--- a/wiki/inflation.wikitext
+++ b/wiki/inflation.wikitext
@@ -26,7 +26,7 @@ From {{L.}} [[inflatio]], ''expansion'', noun of process from perfect passive pa
 *Belarusian: [[інфляцыя]] (infliacyja)
 *Chinese: [[通货膨胀]]
 *Czech: [[inflace]]
-*Danish: [[inflation]]
+*Danish: inflation
 *Dutch: [[inflatie]]
 *Esperanto: [[inflacio]]
 *Estonian: [[inflatsioon]]
