fxd uk <inflation#2139>

--- a/wiki/inflation.wikitext
+++ b/wiki/inflation.wikitext
@@ -48,7 +48,7 @@ From {{L.}} [[inflatio]], ''expansion'', noun of process from perfect passive pa
 *Spanish: [[inflación]]
 *Swedish: inflation
 *Turkish: [[enflasyon]]
-*Ukrainian: [[инфлација]] (inflachija)
+*Ukrainian: [[Інфляція]] (infljachija or inflyachiya)
 *Vietnamese: [[tăng giá|(sự) tăng giá]]
 *Volapük: [[niflat]]
 
