--- a/wiki/history.wikitext
+++ b/wiki/history.wikitext
@@ -47,6 +47,7 @@ From Greek [[ιστορία]]
 *[[Slovak]]: [[dejiny]] ''f pl'' (1), [[dejepis]] ''m'' (2), [[história]] ''f'' (3, 4)
 *Spanish: [[historia]]
 *Swedish: [[historia]]
+*Ukrainian: [[історія]] (istorija)
 *Vietnamese: [[lịch sử]] (历?史)
 
 ===Related Words===
