Added "as opposed to night", to distinguish between daylight style "day" and the 24 hour day. <solstice#35341>

--- a/wiki/solstice.wikitext
+++ b/wiki/solstice.wikitext
@@ -1,7 +1,7 @@
 ===Noun===
 '''solstice'''
 
-#one of two days in the [[year]] when the [[day]] is either longest or shortest
+#one of two days in the [[year]] when the [[day]] (as opposed to [[night]]) is either longest or shortest
 
 ====Related terms====
 *[[summer solstice]]
