robot  Adding:hu <something#37218>

--- a/wiki/something.wikitext
+++ b/wiki/something.wikitext
@@ -45,3 +45,5 @@
 
 #(colloquial) Applied to a noun which is forgetten by the user or hard to pin down, especially from words of a song.
 [[Category:200 English basic words]]
+
+[[hu:something]]
