--- a/wiki/mercurio.wikitext
+++ b/wiki/mercurio.wikitext
@@ -1,4 +1,27 @@
-== Spanish == {{wikipediaAlt|mercury}}
+==Italian==
+===Pronunciation===
+mercùrio, /merˈkurjo/, /<tt>mer"kurjo</tt>/
+===Noun===
+'''mercurio''' ''m''
+
+# [[mercury]] (element)
+
+===Proper noun===
+'''Mercurio''' ''m''
+
+# [[Mercury]] (god, planet)
+
+===Related terms===
+*[[mercoledì]]
+*[[mercuriale]]
+*[[mercurialismo]]
+*[[mercuriano]]
+
+[[category:Italian elements]]
+
+----
+
+== Spanish ==
 === Noun ===
 '''mercurio''' ''m''
 # [[mercury]]
