--- a/wiki/augur.wikitext
+++ b/wiki/augur.wikitext
@@ -1,9 +1,10 @@
 ==English==
-
 ===Noun===
-
 '''augur'''
 
 #A diviner who foretells events by the behaviour of birds or other animals, or by signs derived from celestial phenomena, or unusual occurrences.
+
+====Derived terms====
+*[[augury]]
 
 [[it:augur]]
