--- a/wiki/augury.wikitext
+++ b/wiki/augury.wikitext
@@ -1,9 +1,11 @@
 ==English==
-
 ===Noun===
 '''augury'''
 
 # [[omen]], [[prediction]].
+
+====Related terms====
+*[[augur]]
 
 ====Translations====
 *{{fr}}: [[augure]] ''f''
