--- a/wiki/center.wikitext
+++ b/wiki/center.wikitext
@@ -1,6 +1,5 @@
-<!--If you edit this page, please make corresponding edits to "centre" to keep these pages synchronised-->
-
 ==English==
+<!--If you edit this page, please make corresponding edits to "centre" to keep these pages synchronised-->
 ===Variant spelling===
 *[[centre]] (''British'').  '''Center''' is the US spelling.
 
@@ -203,7 +202,14 @@ The translations below need to be checked by native speakers and inserted into t
 *[[community center]]
 *[[shopping center]]
 
-
 <!--If you edit this page, please make corresponding edits to "centre" to keep these pages synchronised-->
+
+----
+
+==Danish==
+===Noun===
+'''center''' ''n''
+
+# [[centre]], center
 
 [[it:center]]
