+related terms; +danish article; why does nl interwiki go to different spelling? <cello#99307>

--- a/wiki/cello.wikitext
+++ b/wiki/cello.wikitext
@@ -2,7 +2,22 @@
 ==English==
 ===Noun===
 '''cello'''
+
 #a large stringed instrument of the [[violin]] family
+
+====Related terms====
+*[[cellist]]
+
+----
+
+==Danish==
+===Noun===
+'''cello'' ''c''
+
+# cello
+
+====Related terms====
+*[[cellist]]
 
 [[gl:Cello]]
 [[it:cello]]
