--- a/wiki/laine.wikitext
+++ b/wiki/laine.wikitext
@@ -1,3 +1,11 @@
+==Estonian==
+===Noun===
+'''laine'''
+# [[wave]]
+==Finnish==
+===Noun===
+'''laine'''
+# [[wave]]
 ==French==
 ===Noun===
 '''laine''' ''f''
