robot  Adding:pl <soup#43141>

--- a/wiki/soup.wikitext
+++ b/wiki/soup.wikitext
@@ -26,5 +26,7 @@
 *Swedish: [[soppa]] ''c''
 *{{bo}}: [[ཐུག་པ་]] (thug pa)
 
-[[fi:Soup]]
 [[Category:1000 English basic words]]
+
+[[pl:Soup]]
+[[fi:Soup]]
