preposition.  fixing def. <care of#100156>

--- a/wiki/care_of.wikitext
+++ b/wiki/care_of.wikitext
@@ -1,6 +1,9 @@
 ==English==
-===(*)===
+===Preposition===
 '''care of''' (usually abbreviated '''c/o''')
-#Addressing a mail to someone
-#:''"Send your mail c/o Mr. John Smith"''
-#:''"Could you please send this package in care of Mr. John Smith?"''
+# ''(mail)'' Signifies an intermediary responsible for transferring a piece of mail between the postal system and the mail's final addressee, for example when the addressee has no standard address, is under a corporate mail system, or is being manually forwarded mail sent to a more accessible location.
+#:''"Send your mail to me c/o Mr. John Smith"''
+#:''"Could you please send this package to Mr. John Smith, care of the Northwest Shelter?"''
+#::To: John Smith
+#::c/o South Pole station mailbag
+#::Chattanooga, TN 37421
