+danish article <dam#29433>

--- a/wiki/dam.wikitext
+++ b/wiki/dam.wikitext
@@ -1,7 +1,6 @@
-----
 ==English==
 ===Noun===
-'''dam'''
+'''dam''' ([[dams]])
 
 # structure placed across a flowing body of water to stop the flow
 # [[mother]], generally regarding breeding of animals (cf. [[sire]])
@@ -13,6 +12,22 @@
 In lower case
 
 # [[decametre]], [[decameter]]
+
+----
+
+==Danish==
+===Noun===
+'''dam''' ''c''
+
+# [[pond]]
+
+====Derived terms====
+*[[dambrug]] ''n''
+
+===Noun===
+'''dam''' ''n''
+
+# [[draughts]]
 
 ----
 
@@ -28,4 +43,5 @@ In lower case
 ===Examples===
 ''[[Ruter]] [[dam]]'' = [[diamond]] [[queen]]
 
+[[Category:Danish terms with multiple genders]]
 [[it:dam]]
