name for da cat <dam#29433>

--- a/wiki/dam.wikitext
+++ b/wiki/dam.wikitext
@@ -43,5 +43,5 @@ In lower case
 ===Examples===
 ''[[Ruter]] [[dam]]'' = [[diamond]] [[queen]]
 
-[[Category:Danish terms with multiple genders]]
+[[Category:Danish nouns with multiple genders]]
 [[it:dam]]
