robot  Adding:fi <spam#36507>

--- a/wiki/spam.wikitext
+++ b/wiki/spam.wikitext
@@ -90,4 +90,5 @@ From a [[w:Monty Python|Monty Python]] sketch about the proper noun which featur
 #spam (''in computing'')
 
 [[hu:Spam]]
+[[fi:Spam]]
 [[sv:spam]]
