robot  Adding:fi <special#38133>

--- a/wiki/special.wikitext
+++ b/wiki/special.wikitext
@@ -33,5 +33,7 @@ Latin ''[[specialis]]'' (< ''[[species]]'', ''speciei'')
 '''special''' (plural: [[specials]])
 # A reduction in consumer cost (usually for a limited time) for items or services rendered
 
-[[pl:Special]]
 [[Category:1000 English basic words]]
+
+[[pl:Special]]
+[[fi:Special]]
