+danish article <dale#47324>

--- a/wiki/dale.wikitext
+++ b/wiki/dale.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Noun===
-'''dale''' (plural: '''[[dales]]'')
+'''dale''' (plural: '''[[dales]]''')
 
 # [[valley]], [[vale]]
 
@@ -9,5 +9,13 @@
 *[[vale]]
 *[[valley]]
 
-===Related Terms===
+===Related terms===
 *[[dollar]]
+
+----
+
+==Danish==
+===Verb===
+'''dale'''
+
+# to [[fall]]
