--- a/wiki/litio.wikitext
+++ b/wiki/litio.wikitext
@@ -8,6 +8,13 @@ lìtio, /ˈlitjo/, /<tt>"litjo</tt>/
 
 ===Related terms===
 *[[litioso]]
+[[category:Italian elements]]
+----
+==Spanish==
+===Noun===
+'''litio''' ''m''
 
+# [[lithium]]
+[[category:Spanish elements]]
 [[gl:Litio]]
 [[sv:litio]]
