robot  Adding:pl <spectator#98160>

--- a/wiki/spectator.wikitext
+++ b/wiki/spectator.wikitext
@@ -23,3 +23,5 @@ spĕk'tā'tər
 {{wikipediapar|The Spectator}}
 '''the Spectator'''
 # a [[weekly]] [[British]] [[conservative]] [[political]] [[magazine]]; the [[oldest]] [[continually]] [[publish]]ed magazine in the [[English language]]
+
+[[pl:Spectator]]
