/* Translations */ +da <slave#35269>

--- a/wiki/slave.wikitext
+++ b/wiki/slave.wikitext
@@ -21,6 +21,7 @@ Latin, ''sclavus''
 ====Translations====
 *Chinese: [[奴隶]] (nú lì)
 *Czech [[robota]]
+*Danish: slave ''c'', [[træl]] ''c''
 *Dutch: [[slaaf]] ''m'', [[slavin]] ''f''
 *Finnish: [[orja]] (1), [[oheis-]] (2), [[sivu-]] (2)
 *French: [[esclave]]
