robot  Adding:es <spend#7649>

--- a/wiki/spend.wikitext
+++ b/wiki/spend.wikitext
@@ -21,3 +21,5 @@
 #:''I'm sorry boss, but the advertising spend exceeded the budget again this month.''
 #(in the plural) a childish term for [[money]] or [[pocket money]]
 #:''Mam, can I have my spends early this week?''
+
+[[es:spend]]
