--- a/wiki/neon.wikitext
+++ b/wiki/neon.wikitext
@@ -35,24 +35,24 @@
 *[[Estonian]]: [[neoon]]
 *[[Faroese]]: neon
 *[[Finnish]]: neon
-*[[French]]: [[néon]] ''m''
+*French: [[néon]] ''m''
 *[[Frisian]]: neon
 *[[Friulian]]: neon
 *[[Galician]]: neon
 *[[Georgian]]: [[ნეონი]]
-*[[German]]: Neon ''n''
+*German: Neon ''n''
 *[[Maltese]]: neon
 *[[Hebrew]]: [[ניאון]]
-*[[Hungarian]]: neon
-*[[Icelandic]]: neon
+*Hungarian: neon
+*Icelandic: neon
 *[[Interlingua]]: neon
 *[[Irish]]: neon
-*[[Italian]]: neon ''m'', [[neo]] ''m''
+*Italian: neon ''m'', [[neo]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Japanese]]: [[ネオン]]
+*Japanese: [[ネオン]]
 *[[Kashmiri]]: [[néón]]
 *[[Kazakh]]: [[неон]]
 *[[Latin]]: neon
@@ -65,24 +65,25 @@
 *[[Manx]]: [[neion]]
 *[[Modern Greek]]: [[νέο]] ''n''
 *[[Mongolian]]: [[неон]]
-*[[Norwegian]]: neon
-*[[Polish]]: neon ''m''
-*[[Portuguese]]: [[neônio]] ''m'', neon ''m''
-*[[Portuguese]]: [[néon]]
+*Norwegian: neon
+*Polish: neon ''m''
+*Portuguese: 
+*: [[neônio]] ''m'', neon ''m''
+*: [[néon]]
 *[[Romanian]]: neon ''n''
 *[[Russian]]: [[неон]] '' ''
 *[[Scottish Gaelic]]: neon
 *[[Serbian]]: [[неон]]
 *[[Slovak]]: [[neón]]
 *[[Slovenian]]: neon
-*[[Spanish]]: [[neón]] ''m''
-*[[Swedish]]: neon
+*Spanish: [[neón]] ''m''
+*Swedish: neon
 *[[Tajik]]: neon
-*[[Thai]]: [[นีออน]]
-*[[Turkish]]: neon
+*Thai: [[นีออน]]
+*Turkish: neon
 *[[Ukrainian]]: [[неон]]
 *[[Uzbek]]: [[неон]]
-*[[Vietnamese]]: neon, [[Nê-ông]]
+*Vietnamese: neon, [[Nê-ông]]
 *[[Welsh]]: neon
 |}
 |}
@@ -92,6 +93,20 @@ http://elements.vanderkrogt.net/elem/ne.html
 (A lot of the translations were taken from that site with permission from the author, who has spent a lot of effort to get them encoded in unicode.)
 [[Category:Chemical elements]]
 
+----
+
+==Italian==
+===Pronunciation===
+nèon, /ˈnɛ.on/, /<tt>"nE.on</tt>/
+===Noun===
+'''neon''' ''m''
+
+# neon
+
+====Synonym====
+*[[neo]] (''rare'')
+
+[[category:Italian elements]]
 [[gl:Neon]]
 [[la:Neon]]
 [[nl:neon]]
