+danish entry <slave#35269>

--- a/wiki/slave.wikitext
+++ b/wiki/slave.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Derivation===
-Latin, ''sclavus''
+Latin, ''[[sclavus]]''
 
 ===Pronunciation===
 *slāv, /sleɪv/, /<tt>sleIv</tt>/
@@ -36,6 +36,21 @@ Latin, ''sclavus''
 
 === Sources ===
 * [[August 2]], [[2004]], [http://www.eet.com/issue/fp/showArticle.jhtml?articleId=26100928 "EE Times: Beware 'zombie' clauses]
+
+----
+
+==Danish==
+===Noun===
+'''slave''' ''c''
+
+# slave
+
+====Synonyms====
+*[[træl]] ''c''
+
+====Derived terms====
+*[[slaveri]] ''n''
+
 ----
 
 ==French==
