--- a/wiki/neodimio.wikitext
+++ b/wiki/neodimio.wikitext
@@ -1,4 +1,14 @@
-== Spanish == {{wikipediaAlt|neodymium}}
+==Italian==
+===Pronunciation===
+neodìmio, /neoˈdimjo/, /<tt>neo"dimjo</tt>/
+===Noun===
+'''neodimio''' ''m''
+
+# [[neodymium]]
+
+[[category:Italian elements]]
+----
+== Spanish ==
 === Noun ===
 '''neodimio''' ''m''
 # [[neodymium]]
