robot  Adding:fr <spleen#66913>

--- a/wiki/spleen.wikitext
+++ b/wiki/spleen.wikitext
@@ -41,3 +41,4 @@ From the Old French ''[[esplen]]'', from Latin ''[[splen|spl&#275;n]]'', from Gr
 * [[w:Spleen|Wikipedia article on the spleen]]
 
 [[de:Spleen]]
+[[fr:spleen]]
