--- a/wiki/magnesio.wikitext
+++ b/wiki/magnesio.wikitext
@@ -1,4 +1,16 @@
-== Spanish == {{wikipediaAlt|magnesium}}
+==Italian==
+===Pronunciation===
+magnè<u>s</u>io, /maɲˈɲɛzjo/, /<tt>maJ"JEzjo</tt>/
+===Noun===
+'''magnesio''' ''m''
+
+# [[magnesium]]
+===Related terms===
+*[[magnesia]]
+*[[magnesiaco]]
+[[category:Italian elements]]
+----
+== Spanish ==
 === Noun ===
 '''magnesio''' ''m''
 # [[magnesium]]
