--- a/wiki/alluminio.wikitext
+++ b/wiki/alluminio.wikitext
@@ -9,6 +9,6 @@ allumìnio, /alluˈminjo/, /<tt>allu"minjo</tt>/
 ===Related terms===
 *[[allumina]]
 *[[alluminare]]
-[[category:Italian nouns]]
+[[category:Italian elements]]
 
 [[it:alluminio]]
