robot  Adding:et <sport#58332>

--- a/wiki/sport.wikitext
+++ b/wiki/sport.wikitext
@@ -36,5 +36,6 @@
 #*''Jen has a new pair of '''sport''' shoes, and a new '''sports''' bra.''
 
 [[de:Sport]]
+[[et:Sport]]
 [[hr:sport]]
 [[pl:Sport]]
