robot  Adding:et <sprint#76536>

--- a/wiki/sprint.wikitext
+++ b/wiki/sprint.wikitext
@@ -9,3 +9,5 @@ __TOC__
 '''sprint''' ([[transitive]] or [[intransitive]])
 #To [[run]] etc at top speed for a short [[period]]
 [[Category:Swedish derivations]]
+
+[[et:Sprint]]
