--- a/wiki/zolfo.wikitext
+++ b/wiki/zolfo.wikitext
@@ -1,4 +1,15 @@
 ==Italian==
+===Pronunciation===
+zólfo, /ˈtsolfo/, /<tt>"tsolfo</tt>/
 ===Noun===
-'''zolfo''' m
+'''zolfo''' ''m''
+
 # [[sulphur]]
+
+===Related terms===
+*[[solfare]]
+*[[solfidrico]]
+*[[solfonazione]]
+*[[solforico]]
+
+[[category:Italian elements]]
