robot  Adding:fr <square#3860>

--- a/wiki/square.wikitext
+++ b/wiki/square.wikitext
@@ -95,7 +95,9 @@
 
 [[Category:Shapes]]
 
+[[Category:1000 English basic words]]
+
+[[fr:square]]
 [[pt:Square]]
 [[fi:Square]]
 [[sv:square]]
-[[Category:1000 English basic words]]
