a proper entry <personable#100201>

--- a/wiki/personable.wikitext
+++ b/wiki/personable.wikitext
@@ -1,1 +1,5 @@
-Personable (adjective) means friendly.
+==English==
+===Adjective===
+'''personable'''
+#(''of a person'') [[pleasant]], [[attractive]], [[friendly]]
+[[category:English adjectives]]
