--- a/wiki/Xavier.wikitext
+++ b/wiki/Xavier.wikitext
@@ -1,5 +1,7 @@
+===Pronunciation===
+*{{AHD|zāvē-ər}}
 === Proper Noun ===
-'''Xavier'''
+'''Xavier''' {{wikipedia}}
 # A family name turned first name, after St. Francis Xavier
 
 ==== Translations ====
