/* Types of acids */ <acid#1625>

--- a/wiki/acid.wikitext
+++ b/wiki/acid.wikitext
@@ -142,6 +142,7 @@ In certain cases, [[sulphur]], [[selenium]], or [[tellurium]] may take the place
 *[[perchloric acid]]
 *[[periodic acid]]
 *[[permanganic acid]]
+*[[petroselinic acid]]
 *[[phosphoric acid]]
 *[[phosphorous acid]]
 *[[phthalic acid]]
