robot  Adding:la <stage#43943>

--- a/wiki/stage.wikitext
+++ b/wiki/stage.wikitext
@@ -22,3 +22,5 @@
 *Finnish: [[asettaa näyttämölle]]
 *Persian: [[به صحنه آوردن]] (be-sahneh avardan)
 [[Category:1000 English basic words]]
+
+[[la:Stage]]
