--- a/wiki/argon.wikitext
+++ b/wiki/argon.wikitext
@@ -22,7 +22,7 @@
 *[[Breton]]: argon
 *[[Bulgarian]]: [[аргон]] ''m''
 *[[Catalan]]: [[argó]]
-*[[Chinese]]: [[氩]], [[氬]]
+*Chinese: [[氩]], [[氬]] (yà)
 *[[Cornish]]: argon
 *[[Croatian]]: argon
 *[[Czech]]: argon
@@ -31,24 +31,25 @@
 *[[Esperanto]]: [[argono]]
 *[[Estonian]]: [[argoon]]
 *[[Faroese]]: argon
-*[[Finnish]]: argon
-*[[French]]: argon ''m''
+*Finnish: argon
+*French: argon ''m''
 *[[Frisian]]: argon
 *[[Friulian]]: argon
 *[[Galician]]: argon
 *[[Georgian]]: [[არგონი]]
-*[[German]]: Argon ''n''
-*[[Hebrew]]: [[ארגון]]
-*[[Hungarian]]: argon
-*[[Icelandic]]: argon
+*German: Argon ''n''
+*Greek, Modern: [[αργό]] ''n''
+*Hebrew: [[ארגון]]
+*Hungarian: argon
+*Icelandic: argon
 *[[Interlingua]]: argon
 *[[Irish]]: [[argón]]
-*[[Italian]]: argon ''m'', [[argo]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*[[Japanese]]: [[アルゴン]]
+*Italian: argon ''m'', [[argo]] ''m''
+*Japanese: [[アルゴン]]
 *[[Kashmiri]]: [[argón]]
 *[[Kazakh]]: [[аргон]]
 *[[Latvian]]: [[argons]]
@@ -58,28 +59,28 @@
 *[[Malay]]: argon
 *[[Maltese]]: argon
 *[[Manx]]: argon
-*[[Modern Greek]]: [[Αργο]] '' ''
-*[[Mongolian]]: [[аргон]]
-*[[Norwegian]]: argon
-*[[Polish]]: argon ''m''
-*[[Portuguese]]: [[argônio]] ''m''
+*Mongolian: [[аргон]]
+*Norwegian: argon
+*Polish: argon ''m''
+*Portuguese: [[argônio]] ''m''
 *[[Romanian]]: argon ''n''
-*[[Russian]]: [[аргон]] '' ''
+*Russian: [[аргон]] '' ''
 *[[Scottish Gaelic]]: argon
 *[[Serbian]]: [[аргон]]
 *[[Slovak]]: [[argón]]
 *[[Slovenian]]: argon
-*[[Spanish]]: [[argón]] ''m''
-*[[Swedish]]: [[argon]]
+*Spanish: [[argón]] ''m''
+*Swedish: [[argon]]
 *[[Tajik]]: argon
-*[[Thai]]: [[อาร์กอน]]
-*[[Turkish]]: argon
+*Thai: [[อาร์กอน]]
+*Turkish: argon
 *[[Ukrainian]]: [[аргон]]
 *[[Uzbek]]: [[аргон]]
 *[[Vietnamese]]: [[agon]]
 *[[Welsh]]: argon
 |}
 |}
+
 ====External links====
 For etymology and more information refer to:
 http://elements.vanderkrogt.net/elem/be.html
