--- a/wiki/potassio.wikitext
+++ b/wiki/potassio.wikitext
@@ -9,5 +9,5 @@ potàssio, /poˈtassjo/, /<tt>po"tassjo</tt>/
 ===Related terms===
 *[[potassa]]
 *[[potassico]]
-
+[[category:Italian elements]]
 [[ja:potassio]]
