/* Related terms */ <isomer#60468>

--- a/wiki/isomer.wikitext
+++ b/wiki/isomer.wikitext
@@ -11,6 +11,7 @@ From {{Gr.}} [[isos]] ''identical'' and [[meros]] ''part''
 ===Related terms===
 *[[isomerism]]
 *[[structural isomer]]
+*[[positional isomer]]
 *[[geometric isomer]]
 *[[optical isomer]]
 
