robot  Adding:fi,ru <star#1571>

--- a/wiki/star.wikitext
+++ b/wiki/star.wikitext
@@ -98,6 +98,9 @@
 *Persian: [[سرطان خون]] (saratane khun) (1), [[سار]] (saar) (2)
 *Polish: [[zaćma]] ''f'' (1), [[bielmo]] ''n'' (1), [[szpak]] ''m'' (2)
 
+[[Category:1000 English basic words]]
+
 [[de:Star]]
 [[pl:Star]]
-[[Category:1000 English basic words]]
+[[ru:Star]]
+[[fi:Star]]
