--- a/wiki/calcio.wikitext
+++ b/wiki/calcio.wikitext
@@ -7,10 +7,16 @@
 #[[calcium]]
 
 ===Related terms===
-*[[calciare]]
-*[[calciatore]]
-*[[calcistico]]
-
+:kick
+:*[[calciare]]
+:*[[calciatore]]
+:*[[calcistico]]
+:calcium
+:*[[calcareo]]
+:*[[calce]]
+:*[[calcimetria]]
+:*[[calcina]]
+[[category:Italian elements]]
 [[gl:Calcio]]
 [[it:calcio]]
 [[nl:calcio]]
