robot  Adding:es <start#9858>

--- a/wiki/start.wikitext
+++ b/wiki/start.wikitext
@@ -72,6 +72,8 @@
 ====Related words====
 *[[starta]]
 
-[[de:Start]]
 [[Category:Positive words]]
 [[Category:1000 English basic words]]
+
+[[de:Start]]
+[[es:start]]
