robot  Adding:sv <stationary point#67265>

--- a/wiki/stationary_point.wikitext
+++ b/wiki/stationary_point.wikitext
@@ -6,3 +6,5 @@
 
 ====Further reading====
 [http://mathworld.wolfram.com/StationaryPoint.html MathWorld definition of stationary point]
+
+[[sv:stationary point]]
