--- a/wiki/zinco.wikitext
+++ b/wiki/zinco.wikitext
@@ -10,3 +10,4 @@ zinco or <u>z</u>inco, /ˈtsiŋko, ˈdziŋko/, /<tt>"tsiNko, "dziNko</tt>/
 *[[zincare]]
 *[[zincografia]]
 *[[zincotipia]]
+[[category:Italian elements]]
