--- a/wiki/blunderbuss.wikitext
+++ b/wiki/blunderbuss.wikitext
@@ -1,3 +1,4 @@
 ==English==
 ===Noun===
 Old style of firearm with a distinctive large opening at the muzzle, therefore able to fire quantities of nails, stones, shot, etc.
+[[Category:Weapon]]
