--- a/wiki/azote.wikitext
+++ b/wiki/azote.wikitext
@@ -10,7 +10,7 @@
 '''azote''' ''m''
 
 #[[nitrogen]]
-[[Category:Frecnh elements]]
+[[Category:French elements]]
 [[ja:azote]]
 [[pl:Azote]]
 [[sv:azote]]
