--- a/wiki/Kalashnikov.wikitext
+++ b/wiki/Kalashnikov.wikitext
@@ -11,3 +11,4 @@ Named after its designer Anton Kalashnikov
 
 ===Alternate names===
 Also known as '''AK-47''', from '''A'''nton '''K'''alashnikov 19'''47'''.
+[[Category:Weapon]]
