/* Related terms */ <fatty acid#78288>

--- a/wiki/fatty_acid.wikitext
+++ b/wiki/fatty_acid.wikitext
@@ -14,8 +14,15 @@
 *[[palmitic acid]] - C<sub>16</sub>
 *[[stearic acid]] - C<sub>18</sub>
 *[[arachidic acid]] - C<sub>20</sub>
+*[[obtusilic acid]], [[caproleic acid]] - C<sub>10</sub> unsaturated
+*[[lauroleic acid]], [[linderic acid]] - C<sub>12</sub> unsaturated
+*[[myristoleic acid]], [[physeteric acid]], [[tsuzuic acid]] - C<sub>14</sub> unsaturated
 *[[palmitoleic acid]] - C<sub>16</sub> unsaturated
-*[[oleic acid]] - C<sub>18</sub> unsaturated
+*[[petroselinic acid]], [[oleic acid]], [[vaccenic acid]] - C<sub>18</sub> unsaturated
+*[[gadoleic acid]], [[gondoic acid]] - C<sub>20</sub> unsaturated
+*[[cetoleic acid]], [[erucis acid]] - C<sub>22</sub> unsaturated
+*[[nervonic acid]] - C<sub>24</sub> unsaturated
+*[[elaidic acid]] - C<sub>18</sub> trans-unsaturated
 *[[linoleic acid]] - C<sub>18</sub> diunsaturated
 *[[linolenic acid]] - C<sub>18</sub> polyunsaturated
 *[[arachidonic acid]] - C<sub>20</sub> polyunsaturated
