corrected capitalisation, and added [[Category:Weapon]] <cap and ball#77596>

--- a/wiki/cap_and_ball.wikitext
+++ b/wiki/cap_and_ball.wikitext
@@ -2,3 +2,4 @@
 ===Adjective===
 '''Cap and Ball'''
 # Of an early [[loading]] [[system]] for [[handgun]]s where the [[percussion cap]], [[powder]], and [[bullet]] were separate [[component]]s loaded individually into the gun.  Typically used in early to mid 1800s.
+[[Category:Weapon]]
