[[Category:Weapon]] <matchlock#92358>

--- a/wiki/matchlock.wikitext
+++ b/wiki/matchlock.wikitext
@@ -2,3 +2,4 @@
 ===Noun===
 '''matchlock'''
 # Early type of [[firearm]], using a [[smoldering]] piece of [[cord]] to [[fire]] the [[powder]] in the firing [[pan]].
+[[Category:Weapon]]
