/* Noun */ <fatty acid#78288>

--- a/wiki/fatty_acid.wikitext
+++ b/wiki/fatty_acid.wikitext
@@ -3,6 +3,8 @@
 {{wikipedia}}
 '''[[fatty]] [[acid]]'''
 #{{chemistry}} Any of a [[class]] of [[aliphatic]] [[carboxylic acid]]s, of [[general formula]] C<sub>n</sub>H<sub>2n+1</sub>COOH, that [[occur]] combined with [[glycerol]] as [[animal]] or [[vegetable]] [[oil]]s and [[fat]]s. Only those with an [[even]] number of [[carbon]] [[atom]]s are normally found in [[natural]] [[fat]]s
+#*Note: The above general formula applies to the saturated fatty acids. Remove 2 hydrogen atoms for an unsaturated fatty acid, and 2 hydrogen atoms for every double bond in a polyunsaturated faty acid.
+
 ===Related terms===
 *[[acetic acid]] - C<sub>2</sub>
 *[[butyric acid]] - C<sub>4</sub>
