[[Category:Weapon]] <flintlock#92361>

--- a/wiki/flintlock.wikitext
+++ b/wiki/flintlock.wikitext
@@ -2,3 +2,4 @@
 ===Noun===
 '''flintlock'''
 # An early type of [[firearm]], using a spring loaded [[flint]] to strike [[spark]]s into the firing [[pan]].
+[[Category:Weapon]]
