[[Category:Weapon]] <Mauser#82759>

--- a/wiki/Mauser.wikitext
+++ b/wiki/Mauser.wikitext
@@ -4,3 +4,4 @@
 # Any of the firearms made or designed by the Mauser company, noteably [[automatic]] pistols and [[bolt action]] [[rifles]].
 ===Etymology===
 Named after the original designers Wilhelm and Paul Mauser.
+[[Category:Weapon]]
