--- a/wiki/tea.wikitext
+++ b/wiki/tea.wikitext
@@ -40,7 +40,7 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Chinese: [[茶叶]] (cháyè)
+*Chinese: [[茶叶]] (cháyè, chaye, cha2ye4)
 *Finnish: [[tee#Finnish|tee]]
 *{{fr}}: [[thé]] ''m''
 *German: [[Teeblatt]] ''n'', [[Teeblätter]] ''pl''
@@ -71,7 +71,7 @@ From Dutch '''[[thee#Dutch|thee]]''' (through the [[Dutch East India Company]]) 
 *Arabic: [[شاي|شَاي]] (šæːy) ''m''
 *Basque: [[te#Basque|te]]
 *Bulgarian: [[чай#Bulgarian|чай]] (čaj) ''m''
-*Chinese: [[茶]] (chá)
+*Chinese: [[茶]] (chá, cha, cha2)
 *Croatian: [[čaj#Croatian|čaj]] ''m''
 *Czech: [[čaj#Czech|čaj]] ''m''
 *Danish: [[te#Danish|te]] ''c''
