--- a/wiki/AK-47.wikitext
+++ b/wiki/AK-47.wikitext
@@ -4,3 +4,4 @@ Designed by Anton Kalashnikov in 1947.
 ===Proper Noun===
 '''AK-47'''
 # Common name for the [[Kalashnikov]] [[assault rifle]].
+[[Category:Weapon]]
