[[Category:Weapon]] plus wikify <assault rifle#80388>

--- a/wiki/assault_rifle.wikitext
+++ b/wiki/assault_rifle.wikitext
@@ -1,4 +1,5 @@
 ==English==
 ===Noun===
 '''assault rifle'''
-# Any of a group of military rifles that fires a shortened rifle caliber round from a high capacity magazine with the ability to fire in bursts or fully automatic.
+# Any of a group of [[military]] [[rifle]]s that fires a [[shortened]] rifle caliber round from a high [[capacity]] [[magazine]] with the ability to fire in bursts or fully automatic.
+[[Category:Weapon]]
