/* Noun */ <stearic acid#100218>

--- a/wiki/stearic_acid.wikitext
+++ b/wiki/stearic_acid.wikitext
@@ -2,5 +2,5 @@
 ===Noun===
 {{wikipedia}}
 '''stearic acid'''
-# the most common [[saturated fatty acid]]s; it is found in all [[animal]] and many [[vegetable]] [[oil]]s and [[fat]]s; it is used in the [[manufacture]] of [[soap]] etc.
+# the most common [[saturated fatty acid]]; it is found in all [[animal]] and many [[vegetable]] [[oil]]s and [[fat]]s; it is used in the [[manufacture]] of [[soap]] etc.
 #{{chemistry}} ''octadecanoic acid'', CH<sub>3</sub>(CH<sub>2</sub>)<sub>16</sub>COOH
