--- a/wiki/mig.wikitext
+++ b/wiki/mig.wikitext
@@ -4,6 +4,7 @@
 
 '''mig'''
 
-#Any of a series of Russian fighter aircraft manufactured by the  Mikoyan-Gurevich Design Bureaux, using piston and later jet engines.
+#Any of a series of [[Russian]] [[fighter]] [[aircraft]] manufactured by the  Mikoyan-Gurevich Design Bureaux, using [[piston]] and later [[jet]] engines.
 
 [[sv:mig]]
+[[Category:Weapon]]
