--- a/wiki/day.wikitext
+++ b/wiki/day.wikitext
@@ -68,6 +68,7 @@ Middle English < Old English '''[[dæg]]''' < Proto-Germanic '''[[*dagaz]]''' < 
 *Portuguese: [[dia]] ''m''
 *Romanian: [[zi]] ''f''
 *Russian: [[день]] (den’) ''m'', [[дни]] (dni) ''pl''
+*[[Sasxsek]]: din
 *[[Scottish Gaelic]]: [[latha]]
 *Serbian: [[дан]] (dan) ''m''
 *Slovak: [[deň]] ''m''
