--- a/wiki/clarinet.wikitext
+++ b/wiki/clarinet.wikitext
@@ -13,6 +13,7 @@ Learned borrowing from Italian ''clarinetto'', diminutive of ''clarino'' meaning
 *[[Croatian]]: [[klarinet]]
 *[[Dutch]]: [[klarinet]]
 *[[Esperanto]]: [[klarneto]]
+*[[Finnish]]: [[klarinetti]]
 *[[French]]: [[clarinette]]
 *[[German]]: [[Klarinette]]
 *[[Greek]]: [[κλαρινέτο]] (klarinéto)
