[[Category:Weapon]] <Gatling gun#77613>

--- a/wiki/Gatling_gun.wikitext
+++ b/wiki/Gatling_gun.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Noun===
-Type of machine gun with several barrels on a rotating frame, still used today on some modern aircraft and naval weapons.
+Type of [[machine gun]] with several [[barrel]]s on a [[rotating]] frame, still used today on some modern [[aircraft]] and [[naval]] weapons.
 ===Etymology===
-Named after its inventor Richard Gatling.
+Named after its [[inventor]] Richard Gatling.
+[[Category:Weapon]]
