[[Category:Weapon]] <over and under#77612>

--- a/wiki/over_and_under.wikitext
+++ b/wiki/over_and_under.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Noun Phrase===
-Double barreled shotgun, (or infrequently a rifle), with one barrel placed on top of the other.
+Double barreled [[shotgun]], (or infrequently a rifle), with one barrel placed on top of the other.
 ===Alternative term===
 Over-under
+[[Category:Weapon]]
