[[Category:Weapon]] <carbine#77614>

--- a/wiki/carbine.wikitext
+++ b/wiki/carbine.wikitext
@@ -1,3 +1,4 @@
 ==English==
 ===Noun===
-A weapon similar to a rifle but much shorter in length.
+A [[weapon]] similar to a [[rifle]] but much shorter in length.
+[[Category:Weapon]]
