[[Category:Weapon]] <derringer#77610>

--- a/wiki/derringer.wikitext
+++ b/wiki/derringer.wikitext
@@ -1,7 +1,8 @@
 ==English==
 ===Noun===
-Type of small concealable pistol with one or two barrels, but without any loading system or magazine.
+Type of small [[concealable]] [[pistol]] with one or two [[barrel]]s, but without any loading system or [[magazine]].
 ===Etymology===
 Named after gunsmith Henry Derrenger.
 ===Pronunciation===
 derr.en.jer
+[[Category:Weapon]]
