[[Category:Weapon]] <Panzerfaust#71585>

--- a/wiki/Panzerfaust.wikitext
+++ b/wiki/Panzerfaust.wikitext
@@ -1,3 +1,4 @@
 ==German==
 ==Noun==
-Light anti-tank grenade launcher developed in Germany in the latter stages of World War 2.
+Light anti-tank [[grenade]] [[launcher]] developed in Germany in the latter stages of World War 2.
+[[Category:Weapon]]
