--- a/wiki/strabismus.wikitext
+++ b/wiki/strabismus.wikitext
@@ -3,3 +3,5 @@
 '''strabismus'''
 #A [[defect]] of [[vision]] in which one [[eye]] cannot [[focus]] with the [[other]] on an [[object]] because of [[imbalance]] of the eye [[muscle]]s; a [[squint]]
 [[category:English nouns]]
+
+[[nl:strabismus]]
