+wikipedia <star-crossed#100018>

--- a/wiki/star-crossed.wikitext
+++ b/wiki/star-crossed.wikitext
@@ -1,5 +1,6 @@
 ==English==
 ===Adjective===
 '''star-crossed'''
+{{wikipedia}}
 #[[ill]]-[[fated]] by [[destiny]], the [[fate]] of the person being "written in the stars".
 #:''The '''star-crossed''' lovers looked into each other's eyes, before dying.''
