robot  Adding:fi <street#6264>

--- a/wiki/street.wikitext
+++ b/wiki/street.wikitext
@@ -53,3 +53,5 @@ The term street is used with the preposition in. Something is in the street, but
 *[[Volapük]]: [[süt]]
 *{{cy}}: [[heol]] ''f''
 [[Category:1000 English basic words]]
+
+[[fi:Street]]
