robot  Adding:fi <struggle#61179>

--- a/wiki/struggle.wikitext
+++ b/wiki/struggle.wikitext
@@ -3,3 +3,5 @@
 # [[strife]], [[contention]], great [[effort]]
 ===Verb===
 # to [[strive]], to [[labour]] in [[difficulty]], to [[fight]] (''for'' or ''against''), to [[contend]]
+
+[[fi:Struggle]]
