--- a/wiki/sodomy.wikitext
+++ b/wiki/sodomy.wikitext
@@ -3,6 +3,9 @@
 {{wikipedia}}
 '''sodomy'''
 #Any of various forms of [[sexual]] [[intercourse]] held to be [[unnatural]], [[abnormal]] or [[illegal]], especially [[anal]] [[sex]]
+===Translations===
+*[[Finnish]]: [[sodomia]]
+
 [[Category:English nouns]]
 
 [[fi:Sodomy]]
