--- a/wiki/star-crossed.wikitext
+++ b/wiki/star-crossed.wikitext
@@ -1,6 +1,10 @@
 ==English==
+===Etymology===
+First attested [[w:1592|1592]], from "[[w:Romeo and Juliet|Romeo and Juliet]]" by [[w:William Shakspere|William Shakspere]] ([[w:1564|1564]]-[[w:1616|1616]]):
+:''"From out the fatal loins of those two foes
+:''A pair of star-crossed lovers take their life."'' &mdash; ''"Romeo and Juliet"''
+
 ===Adjective===
-'''star-crossed'''
-{{wikipedia}}
+'''star-crossed''' {{wikipedia}}
 #[[ill]]-[[fated]] by [[destiny]], the [[fate]] of the person being "written in the stars".
 #:''The '''star-crossed''' lovers looked into each other's eyes, before dying.''
