--- a/wiki/walker.wikitext
+++ b/wiki/walker.wikitext
@@ -1,19 +1,1 @@
-==English==
-===Noun===
-'''walker'''  (''plural'' walkers)
-#a person who [[walk]]s, either as a [[pedestrian]] or in a [[walking]] [[race]]
-#a [[framework]] [[device]] used to [[support]] either an [[infant]] [[learning]] to walk, or a person with walking [[difficulties]]
-#(''often in plural'') a [[shoe]] designed for [[comfortable]] walking
-===={{trans}}====
-* {{sv}} : [[gående]] ''c'' (1), [[gångare]] (''esp. in walking races'') ''c'' (1), [[fotgängare]] ''c'' (1), [[gångsko]] ''c'' (3)
-
-===Proper noun===
-'''Walker'''
-#an [[English]] [[surname]]
-===Related terms===
-*[[Zimmer frame]]
-*[[baby-walker]]
-
-===={{trans}}====
-
-* {{fr}} : [[marcheur]], [[déambulateur]]
+#redirect [[walker]]
