--- a/wiki/wale.wikitext
+++ b/wiki/wale.wikitext
@@ -1,7 +1,1 @@
-==English==
-
-===Noun===
-
-'''wale'''
-
-#A ridge or streak rising above the surface, as of cloth; hence, the texture of cloth.
+#redirect [[wale]]
