--- a/wiki/walkman.wikitext
+++ b/wiki/walkman.wikitext
@@ -1,12 +1,1 @@
-==English==
-{{wikipedia}}
-===Etymology===
-English ''[[walk]]'' + ''[[man]]''. The product name '''walkman''' was made up for a portable audio cassette player by Sony Corporation which went on sale in Japan on July 1, 1979. '''Walkman''' remains to be a trademark of Sony in many countries, though it is now also used for portable audio cassette players from other manufacturers.
-===Trademark===
-'''walkman'''
-# portable Sony audio cassette player with headphones
-===Noun===
-'''walkman'''
-# portable audio cassette player
-
-[[hu:Walkman]]
+#redirect [[walkman]]
