[[Wand]] moved to [[wand]]: Converting page titles to lowercase <Wand#168617>

--- a/wiki/wand.wikitext
+++ b/wiki/wand.wikitext
@@ -1,25 +1,1 @@
-==English==
-===Noun===
-'''wand''', plural [[wands]]
-
-#A stick or [[staff]], used to perform a useful function
-#A [[suit]] of the [[minor arcana]] in [[tarot]], or a card of that suit
-
-====Derived terms====
-*[[magic wand]]
-
-====Translations====
-*Dutch: [[staf]], [[toverstaf]] (magical), [[roede]]
-*French: [[baguette]]
-*Portuguese: [[varinha]]
-*Spanish: [[varita]] ''f'
-
-----
-
-==Dutch==
-===Noun===
-'''wand''' ''m''
-
-#[[wall]], [[face]] (as in mountain ''face'')
-
-[[fr:Wand]]
+#redirect [[wand]]
