[[Wapiti]] moved to [[wapiti]]: Converting page titles to lowercase <Wapiti#168646>

--- a/wiki/wapiti.wikitext
+++ b/wiki/wapiti.wikitext
@@ -1,7 +1,1 @@
-==English==
-
-===Noun===
-
-'''wapiti'''
-
-#The American [[elk]] (''Cervus elaphus''). It is now considered to be in the same species as the European red [[deer]], which it somewhat exceeds in size.
+#redirect [[wapiti]]
