[[Wang]] moved to [[wang]]: Converting page titles to lowercase <Wang#168623>

--- a/wiki/wang.wikitext
+++ b/wiki/wang.wikitext
@@ -1,20 +1,1 @@
-==English==
-===Noun===
-'''wang''' 
-
-#(''slang'') The [[penis]].
-# A common Chinese surname.
-
-===Onomatopoeia===
-(''plural'' '''wangs''' '''wanging''')
-
-#The sound made when a hollow metal object is struck a glancing blow.
-
-----
-==Dutch==
-===Noun===
-'''wang''' ''f'' (Plural: [[wangen]], diminutive: [[wangetje]])
-
-# [[cheek]]
-
-[[nl:wang]]
+#redirect [[wang]]
