[[Ware]] moved to [[ware]]: Converting page titles to lowercase <Ware#168663>

--- a/wiki/ware.wikitext
+++ b/wiki/ware.wikitext
@@ -1,20 +1,1 @@
-==English==
-
-===Noun===
-'''ware'''  (''plural:'' [[wares]])
-# A [[product]] that is [[bought]] or [[sold]]; a [[commodity]].
-#*Note: Often used in combination - [[knitware]], [[software]] etc.
-
-===={{trans}}====
-* {{sv}} : [[vara]] ''c''
-
-====Derived terms====
-*[[warez]] ''("leet" from plural form)''
-
-===Transitive verb===
-'''to ware'''
-#(''obsolete'') To [[beware]] of something.
-
-===={{trans}}====
-
-* {{io}} : [[-aj]]
+#redirect [[ware]]
