[[Warren]] moved to [[warren]]: Converting page titles to lowercase <Warren#168706>

--- a/wiki/warren.wikitext
+++ b/wiki/warren.wikitext
@@ -1,6 +1,1 @@
-==English==
-===Noun===
-'''warren'''
-#The system of [[burrow]]s where [[rabbit]]s live
-#A [[maze]]like place of [[dark]] [[alley]]s etc in which it is easy to [[lose]] [[oneself]]; especially one that is [[overcrowded]]
-[[Category:English nouns]]
+#redirect [[warren]]
