[[Waste away]] moved to [[waste away]] <waste away#86561>

--- a/wiki/waste_away.wikitext
+++ b/wiki/waste_away.wikitext
@@ -1,4 +1,5 @@
+==English==
 ===Idiom===
 '''[[waste]] [[away]]'''
-#to lose [[energy]] and become [[weak]] and [[feeble]]
+#to lose [energy]] and become [[weak]] and [[feeble]]
 [[Category:English idioms]]
