[[Watt]] moved to [[watt]]: Converting page titles to lowercase <Watt#168846>

--- a/wiki/watt.wikitext
+++ b/wiki/watt.wikitext
@@ -1,55 +1,1 @@
-==English==
-===Noun===
-'''watt''' 
-
-====Etymology====
-:Named after the Scottish engineer James Watt.
-
-#In the [[International System of Units]], the [[derived unit]] of [[power]]; the power of a system in which one [[joule]] of [[energy]] is transferred per [[second]].  Symbol: W
-
-====Translations====
-*[[Bulgarian]]: [[ват]] ''m''
-*Chinese: [[瓦特]] (wate)
-*[[Finnish]]: [[watti]]
-*French: watt ''m'' 
-*Italian: watt ''m'' (''pl'': watt)
-*Japanese: [[ワット]]
-*[[Polish]]: [[wat]] ''m''
-*Spanish: [[vatio]] ''m'', watt ''m''
-*Swedish: watt ''c''
-
-===See also===
-:[[w:watt|Wikipedia article '''watt''']]
-[[Category:English eponyms]]
-[[Category:English:Units of Measure]]
-----
-
-==French==
-===Noun===
-'''watt''' ''m''
-
-#watt
-
-----
-==Italian==
-===Noun===
-'''watt''' ''m''
-
-#watt
-#watts
-
-----
-==Spanish==
-===Noun===
-'''watt''' ''m''
-
-#watt
-
-----
-==Swedish==
-===Noun===
-;watt ''c''
-#watt
-[[fr:watt]]
-[[gl:Watt]]
-[[pl:Watt]]
+#redirect [[watt]]
