--- a/wiki/weald.wikitext
+++ b/wiki/weald.wikitext
@@ -1,7 +1,1 @@
-==English==
-
-===Noun===
-
-'''weald'''
-
-#A wood or forest; a wooded land or region; also, an open country; -- often used in place names.
+#redirect [[weald]]
