[[Web]] moved to [[web]]: Converting page titles to lowercase <Web#168943>

--- a/wiki/web.wikitext
+++ b/wiki/web.wikitext
@@ -1,14 +1,1 @@
-==English==
-
-===Noun===
-'''web'''
-#The silken structure a [[spider]] builds using silk secreted from the [[spinneret]]s at the [[caudal]] tip of its abdomen; a [[spiderweb]].
-#Any interconnected [[set]] of persons, places, or things, which when diagrammed [[resemble]]s a spider's web.
-##By extension, abbreviation for [[w:World Wide Web|World Wide Web]].  <!--Uh, no, that would be "www"? -->
-
-====Translations====
-*Chinese: [[网]] (wăng)
-*{{fi}}: [[seitti]]
-*{{de}}: Netz ''n''
-*Japanese: [[蜘蛛]]の[[巣]] (kumo no su)
-*Russian: [сеть] (set')
+#redirect [[web]]
